--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             </div>
         </div>
     </div>
-
-    <div class="container">
+ <div class="home-container">
+      <div class="container">
         <div class="header">
             <div class="img-icon">
                 <img class="img-icon1" src="images/Transparent Ton Catel logo.png" alt="Mew img-icon"
@@ -93,6 +93,7 @@
             </div>
         </div>
     </div>
+ </div>
      <div class="footer">
             <div class="footer-box1">
                 <div class="footer-box">
