--- a/daily checkin.html
+++ b/daily checkin.html
@@ -16,6 +16,9 @@
     <div class="daily-task">
         <p class="coin-amount-task">11,500</p>
         <div class="task-container">
+            <div class="task-cancel">
+                <a href="index.html"><i class='bx bx-x'></i></a>
+            </div>
             <div class="task-box">
                 <div class="box-cap1">
                     <p class="t-text">Log in</p>
