--- a/index.html
+++ b/index.html
@@ -14,112 +14,122 @@
 
 <body>
     <div class="preloader">
-        <div class="loading"></div>
-        <p class="LT">Loading</p>
-        <div class="load-text">
-            <p class="LT1">Ton Catel</p>
-            <p class="LT2 ">will be launched</p>
-            <p class="LT3">on TON</p>
+        <div class="preloader-container">
+            <div class="loading"></div>
+            <p class="LT">Loading</p>
+            <div class="load-text">
+                <p class="LT1">Ton Catel</p>
+                <p class="LT2 ">will be launched</p>
+                <!-- <p class="LT3">on TON</p> -->
+            </div>
         </div>
         <div class="channels-icons">
-            <p>Keep in Touch:</p>
-            <div class="channel-box">
-                <div class="channels">
-                    <i class='bx bxl-telegram'></i>
-                </div>
-                <div class="channel">
-                    <i class='bx bxl-youtube'></i>
-                </div>
-                <div class="channel">
-                    <i class="fa-brands fa-x-twitter"></i>
+            <div class="channels-icon-box">
+                <p class="LT3">on TON</p>
+                <p>Keep in Touch:</p>
+                <div class="channel-box">
+                    <div class="channels">
+                        <i class='bx bxl-telegram'></i>
+                    </div>
+                    <div class="channel">
+                        <i class='bx bxl-youtube'></i>
+                    </div>
+                    <div class="channel">
+                        <i class="fa-brands fa-x-twitter"></i>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
- <div class="home-container">
-      <div class="container">
-        <div class="header">
-            <div class="img-icon">
-                <img class="img-icon1" src="images/Transparent Ton Catel logo.png" alt="Mew img-icon"
-                    style="width: 40px; height: 40px;">
-                <p class="title-name">Ton Catel</p>
+    <div class="home-container">
+        <div class="container">
+            <div class="header">
+                <div class="img-icon">
+                    <img class="img-icon1" src="images/Transparent Ton Catel logo.png" alt="Mew img-icon"
+                        style="width: 40px; height: 40px;">
+                    <p class="title-name">Ton Catel</p>
+                </div>
+                <div class="setting">
+                    <i class="fa-solid fa-gear"></i>
+                </div>
             </div>
-            <div class="setting">
-                <i class="fa-solid fa-gear"></i>
+            <div class="progress">
+                <div class="level">
+                    <div class="level-name">
+                        <p>Mew</p>
+                        <i class='bx bx-chevron-right'></i>
+                    </div>
+                    <p class="lvl"><a href="level.html">Level 1</a></p>
+                </div>
+                <div class="progress-gradient">
+                    <div class="gradient-bar"></div>
+                </div>
+            </div>
+            <div class="box-award">
+                <div class="box">
+                    <div class="bullet"></div>
+                    <div class="box-icon">
+                        <img src="images/Paomedia-Small-N-Flat-Calendar.svg" alt="calendar">
+                    </div>
+                    <p><a href="daily checkin.html">Daily Task</a></p>
+                </div>
+                <div class="box">
+                    <div class="bullet"></div>
+                    <div class="box-icon">
+                        <img src="images/gold-coin-leprechaun-money-gold-pot-374cc050e2deeac87ef03fa64241b726.png"
+                            style="width: 35px; height: 35px;">
+                    </div>
+                    <p><a href="bonuses.html">Bonuses</a></p>
+                </div>
+                <div class="box">
+                    <div class="bullet"></div>
+                    <div class="box-icon">
+                        <img src="images/pngegg (6).png" style="width: 35px; height: 35px;" alt="calendar">
+                    </div>
+                    <p><a href="">Daily Meme</a></p>
+                </div>
+            </div>
+            <div class="main-box">
+                <div class="coin-balance">
+                    <p class="coin-amount">5000</p>
+                </div>
+                <div class="farming-btn">
+                    <button onclick="changeText()" id="btn">Start Farming</button>
+                </div>
             </div>
         </div>
-        <div class="progress">
-            <div class="level">
-                <div class="level-name">
-                    <p>Mew</p>
-                    <i class='bx bx-chevron-right'></i>
-                </div>
-                <p class="lvl">Level 1</p>
-            </div>
-            <div class="progress-gradient">
-                <div class="gradient-bar"></div>
-            </div>
-        </div>
-        <div class="box-award">
-            <div class="box">
-                <div class="bullet"></div>
-                <div class="box-icon">
-                    <img src="images/Paomedia-Small-N-Flat-Calendar.svg" alt="calendar">
-                </div>
-                <p><a href="daily checkin.html">Daily Task</a></p>
-            </div>
-            <div class="box">
-                <div class="bullet"></div>
-                <div class="box-icon">
-                    <img src="images/gold-coin-leprechaun-money-gold-pot-374cc050e2deeac87ef03fa64241b726.png"
-                        style="width: 35px; height: 35px;">
-                </div>
-                <p><a href="">Bonuses</a></p>
-            </div>
-            <div class="box">
-                <div class="bullet"></div>
-                <div class="box-icon">
-                    <img src="images/pngegg (6).png" style="width: 35px; height: 35px;" alt="calendar">
-                </div>
-                <p><a href="">Daily Meme</a></p>
-            </div>
-        </div>
-        <div class="main-box">
-            <div class="coin-balance">
-                <p class="coin-amount">5000</p>
-            </div>
-            <div class="farming-btn">
-                <button onclick="changeText()" id="btn">Start Farming</button>
-            </div>
-        </div>
-    </div>
-      <div class="footer">
+        <div class="footer">
             <div class="footer-box1">
                 <div class="footer-box">
-                    <img src="images/profile-image-1349-svgrepo-com.svg" style="height: 20px; width:20px" alt="">
-                    <p>Profile</p>
+                    <a href="level.html"><img src="images/profile-image-1349-svgrepo-com.svg"
+                            style="height: 20px; width:20px" alt=""></a>
+                    <p><a href="level.html">Profile</a></p>
                 </div>
                 <div class="footer-box">
-                    <img src="images/task-list-svgrepo-com.svg" style="height: 20px; width:20px;" alt="">
-                    <p>Tasks</p>
+                    <a href="mission.html"><img src="images/task-list-svgrepo-com.svg" style="height: 20px; width:20px;"
+                            alt=""></a>
+                    <p><a href="mission.html">Missions</a></p>
                 </div>
             </div>
             <div class="home">
-                <img src="images/Transparent Ton Catel logo.png" alt="Ton Catel logo"
-                    style="height: 50px; width:50px; border-radius: 50%; box-shadow: 0 0 50px #ccc; background-color: #ccc; opacity: 0.9;">
+                <a href="index.html"><img src="images/Transparent Ton Catel logo.png" alt="Ton Catel logo"
+                        style="height: 50px; width:50px; border-radius: 50%; box-shadow: 0 0 50px #ccc; background-color: #ccc; opacity: 0.9;"></a>
             </div>
             <div class="footer-box1">
                 <div class="footer-box">
-                    <img src="images/friend-svgrepo-com.svg" style="height: 20px; width:30px" alt="">
-                    <p>Invites</p>
+                    <a href="invites.html"><img src="images/friend-svgrepo-com.svg" style="height: 20px; width:30px"
+                            alt=""></a>
+                    <p><a href="invites.html">Invites</a></p>
                 </div>
                 <div class="footer-box">
-                    <img src="images/screwdriver-wrench-svgrepo-com.svg" style="height: 20px; width:20px" alt="">
-                    <p>Update</p>
+                    <a href="updates.html"><img src="images/screwdriver-wrench-svgrepo-com.svg"
+                            style="height: 20px; width:20px" alt=""></a>
+                    <p><a href="updates.html">Update</a></p>
                 </div>
             </div>
         </div>
- </div>
+    </div>
+
 </body>
 
 </html>
