--- a/invites.html
+++ b/invites.html
@@ -13,93 +13,114 @@
 </head>
 
 <body>
+    <!-- invite codes -->
+    <!-- invite body -->
     <div class="invites-body">
+        <!-- invites-container -->
         <div class="invites-container">
+            <!-- invites-cancel -->
             <div class="invites-cancel">
                 <a href="index.html"><i class='bx bx-x'></i></a>
             </div>
+            <!-- invites-header -->
             <div class="invites-header">
                 <img src="images/friend-svgrepo-com.svg" alt="invites-icon">
                 <p>Recruit Soldiers</p>
             </div>
+            <!-- invites-upgrade -->
             <div class="invites-upgrade">
                 <p>Limit-50 Invites</p>
                 <p>⇾</p>
                 <p>Upgrade to 100</p>
             </div>
+            <!-- invites-coin amount -->
             <div class="invites-coin">
-                <img src="images/Transparent Ton Catel logo.png" style="height: 25px; width: 25px;">
-                <p>0</p>
+                <div class="coin-amount">
+                    <img src="images/Transparent Ton Catel logo.png" style="height: 25px; width: 25px;">
+                    <p>0</p>
+                </div>
             </div>
+            <!-- invites-claim btn -->
             <div class="invite-claim">
                 <button id="btn-claim">Claim</button>
             </div>
-            <div class="invites-notify">
+            <!-- invite-notice -->
+            <div class="invites-notice">
                 <p>Earn 500 Gato for each recuit</p>
                 <p>Earn 5% of your soldiers earnings</p>
                 <p>❗Avoid recruiting Bots,GANGWAR is coming❗</p>
             </div>
             <p id="no-recurit">0 soldiers</p>
-            <div class="invites-row">
-                <div class="invites-no">
+            <!-- invites-box -->
+            <div class="invites-box">
+                <!-- invites-row -->
+                <div class="invites-row">
                     <img src="images/binance-logo.png" style="width:20px; height:20px">
-                    <div class="invites-no-box">
+                    <div class="invites-row-box">
                         <p>recurit name</p>
                         <p class="invite-amount">2000 Gato</p>
                     </div>
                 </div>
-                <div class="invites-no">
+                <!-- invites-row -->
+                <div class="invites-row">
                     <img src="images/binance-logo.png" style="width:20px; height:20px">
-                    <div class="invites-no-box">
+                    <div class="invites-row-box">
                         <p>recurit name</p>
                         <p class="invite-amount">2000 Gato</p>
                     </div>
                 </div>
-                <div class="invites-no">
+                <!-- invites-row -->
+                <div class="invites-row">
                     <img src="images/binance-logo.png" style="width:20px; height:20px">
-                    <div class="invites-no-box">
+                    <div class="invites-row-box">
                         <p>recurit name</p>
                         <p class="invite-amount">2000 Gato</p>
                     </div>
                 </div>
-                <div class="invites-no">
+                <!-- invites-row -->
+                <div class="invites-row">
                     <img src="images/binance-logo.png" style="width:20px; height:20px">
-                    <div class="invites-no-box">
+                    <div class="invites-row-box">
                         <p>recurit name</p>
                         <p class="invite-amount">2000 Gato</p>
                     </div>
                 </div>
-                <div class="invites-no">
+                <!-- invites-row -->
+                <div class="invites-row">
                     <img src="images/binance-logo.png" style="width:20px; height:20px">
-                    <div class="invites-no-box">
+                    <div class="invites-row-box">
                         <p>recurit name</p>
                         <p class="invite-amount">2000 Gato</p>
                     </div>
                 </div>
-                <div class="invites-no">
+                <!-- invites-row -->
+                <div class="invites-row">
                     <img src="images/binance-logo.png" style="width:20px; height:20px">
-                    <div class="invites-no-box">
+                    <div class="invites-row-box">
                         <p>recurit name</p>
                         <p class="invite-amount">2000 Gato</p>
                     </div>
                 </div>
-                <div class="invites-no">
+                <!-- invites-row -->
+                <div class="invites-row">
                     <img src="images/binance-logo.png" style="width:20px; height:20px">
-                    <div class="invites-no-box">
+                    <div class="invites-row-box">
                         <p>recurit name</p>
                         <p class="invite-amount">2000 Gato</p>
                     </div>
                 </div>
-                <div class="invites-no">
+                <!-- invites-row -->
+                <div class="invites-row">
                     <img src="images/binance-logo.png" style="width:20px; height:20px">
-                    <div class="invites-no-box">
+                    <div class="invites-row-box">
                         <p>recurit name</p>
                         <p class="invite-amount">2000 Gato</p>
                     </div>
                 </div>
-                <div class="invites-no">
+                <!-- invites-row -->
+                <div class="invites-row">
                     <img src="images/binance-logo.png" style="width:20px; height:20px">
-                    <div class="invites-no-box">
+                    <div class="invites-row-box">
                         <p>recurit name</p>
                         <p class="invite-amount">2000 Gato</p>
                     </div>
@@ -108,6 +129,7 @@
         </div>
 
     </div>
+    <!-- invite link -->
     <div class="invite-link">
         <button class="btn-invite">Invite a friend!</button>
     </div>
