--- a/index.html
+++ b/index.html
@@ -13,20 +13,23 @@
 </head>
 
 <body>
+    <!--loading page section -->
     <div class="preloader">
         <div class="preloader-container">
+            <!-- loading page animination -->
             <div class="loading"></div>
             <p class="LT">Loading</p>
+            <!-- loading page text -->
             <div class="load-text">
                 <p class="LT1">Ton Catel</p>
                 <p class="LT2 ">will be launched</p>
-                <!-- <p class="LT3">on TON</p> -->
             </div>
         </div>
+        <!-- loading page official social media -->
         <div class="channels-icons">
             <div class="channels-icon-box">
                 <p class="LT3">on TON</p>
-                <p>Keep in Touch:</p>
+                <p class="icon-text">Keep in Touch:</p>
                 <div class="channel-box">
                     <div class="channels">
                         <i class='bx bxl-telegram'></i>
@@ -41,8 +44,10 @@
             </div>
         </div>
     </div>
+    <!-- homepage section-->
     <div class="home-container">
         <div class="container">
+            <!-- homepage header -->
             <div class="header">
                 <div class="img-icon">
                     <img class="img-icon1" src="images/Transparent Ton Catel logo.png" alt="Mew img-icon"
@@ -53,7 +58,9 @@
                     <i class="fa-solid fa-gear"></i>
                 </div>
             </div>
+            <!-- homepage progress info -->
             <div class="progress">
+                <!-- homepage level info -->
                 <div class="level">
                     <div class="level-name">
                         <p>Mew</p>
@@ -61,11 +68,14 @@
                     </div>
                     <p class="lvl"><a href="level.html">Level 1</a></p>
                 </div>
+                <!-- homepage progress bar -->
                 <div class="progress-gradient">
                     <div class="gradient-bar"></div>
                 </div>
             </div>
+            <!-- homepage bonus box -->
             <div class="box-award">
+                <!-- daily task box -->
                 <div class="box">
                     <div class="bullet"></div>
                     <div class="box-icon">
@@ -73,6 +83,7 @@
                     </div>
                     <p><a href="daily checkin.html">Daily Task</a></p>
                 </div>
+                <!-- bonuses box -->
                 <div class="box">
                     <div class="bullet"></div>
                     <div class="box-icon">
@@ -81,6 +92,7 @@
                     </div>
                     <p><a href="bonuses.html">Bonuses</a></p>
                 </div>
+                <!-- Daily meme box -->
                 <div class="box">
                     <div class="bullet"></div>
                     <div class="box-icon">
@@ -89,38 +101,54 @@
                     <p><a href="">Daily Meme</a></p>
                 </div>
             </div>
+            <!-- main-box -->
             <div class="main-box">
-                <div class="coin-balance">
-                    <p class="coin-amount">5000</p>
+                <!-- main-box-image -->
+                <div class="main-page-img">
+                    <img src="images/Mew.PNG">
                 </div>
+                <!-- main-box-coin-balance -->
+                <div class="homepage-balance">
+                    <div class="coin-amount">
+                        <img src="images/Transparent Ton Catel logo.png" style="height: 25px; width: 25px;">
+                        <p>0</p>
+                    </div>
+                </div>
+                <!-- main-box-farming-btn -->
                 <div class="farming-btn">
                     <button onclick="changeText()" id="btn">Start Farming</button>
                 </div>
             </div>
         </div>
+        <!-- footer section -->
         <div class="footer">
             <div class="footer-box1">
+                <!-- level-footer -->
                 <div class="footer-box">
                     <a href="level.html"><img src="images/profile-image-1349-svgrepo-com.svg"
                             style="height: 20px; width:20px" alt=""></a>
                     <p><a href="level.html">Profile</a></p>
                 </div>
+                <!-- mission-footer -->
                 <div class="footer-box">
                     <a href="mission.html"><img src="images/task-list-svgrepo-com.svg" style="height: 20px; width:20px;"
                             alt=""></a>
                     <p><a href="mission.html">Missions</a></p>
                 </div>
             </div>
+            <!-- home-footer -->
             <div class="home">
                 <a href="index.html"><img src="images/Transparent Ton Catel logo.png" alt="Ton Catel logo"
                         style="height: 50px; width:50px; border-radius: 50%; box-shadow: 0 0 50px #ccc; background-color: #ccc; opacity: 0.9;"></a>
             </div>
+            <!-- invite-footer -->
             <div class="footer-box1">
                 <div class="footer-box">
                     <a href="invites.html"><img src="images/friend-svgrepo-com.svg" style="height: 20px; width:30px"
                             alt=""></a>
                     <p><a href="invites.html">Invites</a></p>
                 </div>
+                <!-- update-footer -->
                 <div class="footer-box">
                     <a href="updates.html"><img src="images/screwdriver-wrench-svgrepo-com.svg"
                             style="height: 20px; width:20px" alt=""></a>
