--- a/mission.html
+++ b/mission.html
@@ -13,35 +13,47 @@
 </head>
 
 <body>
+    <!-- mission-body -->
     <div class="mission-body">
+        <!-- mission-container -->
         <div class="mission-container">
             <div class="mission-containers">
+                <!-- mission-cancel -->
                 <div class="mission-cancel">
                     <a href="index.html"><i class='bx bx-x'></i></a>
                 </div>
+                <!-- mission-header -->
                 <div class="mission-header">
                     <p>Missions</p>
                 </div>
+                <!-- mission-info -->
                 <div class="mission-info">
                     <p class="mission-bal">Balance</p>
                     <div class="mission-balance">
-                        <img src="images/Transparent Ton Catel logo.png" style="width: 25px; height: 25px;">
-                        <p class="coin-balance">33,500</p>
+                        <div class="coin-amount">
+                            <img src="images/Transparent Ton Catel logo.png" style="height: 25px; width: 25px;">
+                            <p>0</p>
+                        </div>
                     </div>
-                    <div class="mission-text">
+                    <!-- mission-notice -->
+                    <div class="mission-notice">
                         <p>Earn extra Gato by completing simple missions</p>
                         <p>Cheating can result in perment account ban</p>
                     </div>
-
+                    <!-- mission-disclaimer-btn -->
                     <button class="disclaimer">Read full disclaimer</button>
                 </div>
+                <!-- mission-option -->
                 <div class="mission-option">
                     <p class="opt">Active</p>
                     <p class="opt">Completed</p>
                     <p>Limit - 5 mission per day</p>
                 </div>
-                <div class="mission-box">
-                    <div class="mission-boxe">
+                <!-- mission-box-container-->
+                <div class="mission-box-container">
+                    <!-- mission-box -->
+                    <div class="mission-box">
+                        <!-- mission-boxes -->
                         <div class="mission-boxes">
                             <img src="images/icons8-twitterx.svg">
                             <div class="mission-boxes1">
@@ -52,6 +64,7 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- mission-boxes -->
                         <div class="mission-boxes">
                             <img src="images/telegram-svgrepo-com.svg">
                             <div class="mission-boxes1">
@@ -62,6 +75,7 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- mission-boxes -->
                         <div class="mission-boxes">
                             <img src="images/youtube-svgrepo-com.svg">
                             <div class="mission-boxes1">
@@ -72,6 +86,7 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- mission-boxes -->
                         <div class="mission-boxes">
                             <img src="images/gamepad-svgrepo-com (2).svg">
                             <div class="mission-boxes1">
@@ -82,6 +97,7 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- mission-boxes -->
                         <div class="mission-boxes">
                             <img src="images/www-svgrepo-com.svg">
                             <div class="mission-boxes1">
@@ -92,6 +108,7 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- mission-promo-link -->
                         <div class="promo-link">
                             <button class="promo-btn">Click here for promo and partnership</button>
                         </div>
