--- a/updates.html
+++ b/updates.html
@@ -13,70 +13,78 @@
 </head>
 
 <body>
+    <!--update codes-->
     <div class="update-body">
-        <div class="update-cancel">
-            <a href="index.html"><i class='bx bx-x'></i></a>
-        </div>
-        <div class="update-container">
-            <div class="update-title">
-                <div class="updates-title">
-                    <p class="updates-big">Airdrop is Coming❕</p>
-                    <p class="updates-small">Stay tuned...</p>
-                </div>
+        <div class="update-container-box">
+            <div class="update-cancel">
+                <a href="index.html"><i class='bx bx-x'></i></a>
+            </div>
+            <!-- update-container -->
+            <div class="update-container">
+                <!-- update notice -->
+                <div class="update-notice">
+                    <div class="update-notice-text">
+                        <p class="updates-big">Airdrop is Coming❕</p>
+                        <p class="updates-small">Stay tuned...</p>
+                    </div>
 
-            </div>
-            <div class="update-info">
-                <p>As a member of Ton Catel,</p>
-                <p>you have diligently shown your commitment to the community.</p>
-                <p>Soon it will be time to reward your loyalty with a shrae of the biggest memecoin on TON</p>
-                <p>We built this project together, join us as we share the reward!</p>
-            </div>
-            <div class="update-box">
-                <div class="update-box-titles">
-                    <p>Progress / Milestones</p>
                 </div>
-                <div class="update-boxes">
-                    <p>MVP-Gaming bot</p>
-                    <i class='bx bx-check'></i>
+                <!-- update-info -->
+                <div class="update-info">
+                    <p>As a member of Ton Catel,</p>
+                    <p>you have diligently shown your commitment to the community.</p>
+                    <p>Soon it will be time to reward your loyalty with a shrae of the biggest memecoin on TON</p>
+                    <p>We built this project together, join us as we share the reward!</p>
                 </div>
-                <div class="update-boxes">
-                    <p>Meme for the day-in-game feature</p>
-                    <p class="loading">Loading</p>
-                </div>
-                <div class="update-boxes">
-                    <p>Connect wallet</p>
-                    <p class="loading">Loading</p>
-                </div>
-                <div class="update-boxes">
-                    <p>Road to a thousand memes</p>
-                    <p class="soon">Coming Soon...</p>
-                </div>
-                <div class="update-boxes">
-                    <p>GANGWARS</p>
-                    <p class="soon">Coming Soon...</p>
-                </div>
-                <div class="update-boxes">
-                    <p>The DEX</p>
-                    <p class="soon">Coming Soon...</p>
-                </div>
-                <div class="update-boxes">
-                    <p>Partnerships</p>
-                    <p class="soon">Coming Soon...</p>
-                </div>
-                <div class="update-boxes">
-                    <p>Exchange negotiations</p>
-                    <p class="soon">Coming Soon...</p>
-                </div>
-                <div class="update-boxes">
-                    <p>Shares calculation</p>
-                    <p class="soon">Coming Soon...</p>
-                </div>
-                <div class="update-boxes">
-                    <p>Airdrop and Listing</p>
-                    <p class="soon">Coming Soon...</p>
+                <!-- update-box-info -->
+                <div class="update-box">
+                    <div class="update-box-titles">
+                        <p>Progress / Milestones</p>
+                    </div>
+                    <div class="update-boxes">
+                        <p>MVP-Gaming bot</p>
+                        <i class='bx bx-check'></i>
+                    </div>
+                    <div class="update-boxes">
+                        <p>Meme for the day-in-game feature</p>
+                        <p class="loading">Loading</p>
+                    </div>
+                    <div class="update-boxes">
+                        <p>Connect wallet</p>
+                        <p class="loading">Loading</p>
+                    </div>
+                    <div class="update-boxes">
+                        <p>Road to a thousand memes</p>
+                        <p class="soon">Coming Soon...</p>
+                    </div>
+                    <div class="update-boxes">
+                        <p>GANGWARS</p>
+                        <p class="soon">Coming Soon...</p>
+                    </div>
+                    <div class="update-boxes">
+                        <p>The DEX</p>
+                        <p class="soon">Coming Soon...</p>
+                    </div>
+                    <div class="update-boxes">
+                        <p>Partnerships</p>
+                        <p class="soon">Coming Soon...</p>
+                    </div>
+                    <div class="update-boxes">
+                        <p>Exchange negotiations</p>
+                        <p class="soon">Coming Soon...</p>
+                    </div>
+                    <div class="update-boxes">
+                        <p>Shares calculation</p>
+                        <p class="soon">Coming Soon...</p>
+                    </div>
+                    <div class="update-boxes">
+                        <p>Airdrop and Listing</p>
+                        <p class="soon">Coming Soon...</p>
+                    </div>
                 </div>
             </div>
         </div>
+
     </div>
 </body>
 
