--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="box">
                     <div class="bullet"></div>
                     <div class="box-icon">
-                        <img src="images/Paomedia-Small-N-Flat-Calendar.svg" alt="calendar">
+                        <img src="images/Paomedia-Small-N-Flat-Calendar.svg" alt="Daily Checkin">
                     </div>
                     <p><a href="daily checkin.html">Daily Task</a></p>
                 </div>
@@ -88,7 +88,7 @@
                     <div class="bullet"></div>
                     <div class="box-icon">
                         <img src="images/gold-coin-leprechaun-money-gold-pot-374cc050e2deeac87ef03fa64241b726.png"
-                            style="width: 35px; height: 35px;">
+                            style="width: 35px; height: 35px;" alt="Bonus">
                     </div>
                     <p><a href="bonuses.html">Bonuses</a></p>
                 </div>
@@ -96,7 +96,7 @@
                 <div class="box">
                     <div class="bullet"></div>
                     <div class="box-icon">
-                        <img src="images/pngegg (6).png" style="width: 35px; height: 35px;" alt="calendar">
+                        <img src="images/pngegg (6).png" style="width: 35px; height: 35px;" alt="Daily Meme">
                     </div>
                     <p><a href="">Daily Meme</a></p>
                 </div>
@@ -155,7 +155,7 @@
                     <p><a href="updates.html">Update</a></p>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
 </body>
