--- a/invites.html
+++ b/invites.html
@@ -20,7 +20,7 @@
         <div class="invites-container">
             <!-- invites-cancel -->
             <div class="invites-cancel">
-                <a href="index.html"><i class='bx bx-x'></i></a>
+                <a href="index.html"><i class='bx bxs-left-arrow'></i></a>
             </div>
             <!-- invites-header -->
             <div class="invites-header">
@@ -50,77 +50,114 @@
                 <p>Earn 5% of your soldiers earnings</p>
                 <p>❗Avoid recruiting Bots,GANGWAR is coming❗</p>
             </div>
+            <!-- invities no. of recurits -->
             <p id="no-recurit">0 soldiers</p>
             <!-- invites-box -->
             <div class="invites-box">
                 <!-- invites-row -->
                 <div class="invites-row">
-                    <img src="images/binance-logo.png" style="width:20px; height:20px">
+                    <!-- profile image of invite -->
+                    <div class="invite-profile-img">
+                        <img src="images/binance-logo.png" style="width:20px; height:20px">
+                    </div>
                     <div class="invites-row-box">
+                        <!-- name of the invite -->
                         <p>recurit name</p>
                         <p class="invite-amount">2000 Gato</p>
                     </div>
                 </div>
                 <!-- invites-row -->
                 <div class="invites-row">
-                    <img src="images/binance-logo.png" style="width:20px; height:20px">
+                    <!-- profile image of invite -->
+                    <div class="invite-profile-img">
+                        <img src="images/binance-logo.png" style="width:20px; height:20px">
+                    </div>
                     <div class="invites-row-box">
+                        <!-- name of the invite -->
                         <p>recurit name</p>
                         <p class="invite-amount">2000 Gato</p>
                     </div>
                 </div>
                 <!-- invites-row -->
                 <div class="invites-row">
-                    <img src="images/binance-logo.png" style="width:20px; height:20px">
+                    <!-- profile image of invite -->
+                    <div class="invite-profile-img">
+                        <img src="images/binance-logo.png" style="width:20px; height:20px">
+                    </div>
                     <div class="invites-row-box">
+                        <!-- name of the invite -->
                         <p>recurit name</p>
                         <p class="invite-amount">2000 Gato</p>
                     </div>
                 </div>
                 <!-- invites-row -->
                 <div class="invites-row">
-                    <img src="images/binance-logo.png" style="width:20px; height:20px">
+                    <!-- profile image of invite -->
+                    <div class="invite-profile-img">
+                        <img src="images/binance-logo.png" style="width:20px; height:20px">
+                    </div>
                     <div class="invites-row-box">
+                        <!-- name of the invite -->
                         <p>recurit name</p>
                         <p class="invite-amount">2000 Gato</p>
                     </div>
                 </div>
                 <!-- invites-row -->
                 <div class="invites-row">
-                    <img src="images/binance-logo.png" style="width:20px; height:20px">
+                    <!-- profile image of invite -->
+                    <div class="invite-profile-img">
+                        <img src="images/binance-logo.png" style="width:20px; height:20px">
+                    </div>
                     <div class="invites-row-box">
+                        <!-- name of the invite -->
                         <p>recurit name</p>
                         <p class="invite-amount">2000 Gato</p>
                     </div>
                 </div>
                 <!-- invites-row -->
                 <div class="invites-row">
-                    <img src="images/binance-logo.png" style="width:20px; height:20px">
+                    <!-- profile image of invite -->
+                    <div class="invite-profile-img">
+                        <img src="images/binance-logo.png" style="width:20px; height:20px">
+                    </div>
                     <div class="invites-row-box">
+                        <!-- name of the invite -->
                         <p>recurit name</p>
                         <p class="invite-amount">2000 Gato</p>
                     </div>
                 </div>
                 <!-- invites-row -->
                 <div class="invites-row">
-                    <img src="images/binance-logo.png" style="width:20px; height:20px">
+                    <!-- profile image of invite -->
+                    <div class="invite-profile-img">
+                        <img src="images/binance-logo.png" style="width:20px; height:20px">
+                    </div>
                     <div class="invites-row-box">
+                        <!-- name of the invite -->
                         <p>recurit name</p>
                         <p class="invite-amount">2000 Gato</p>
                     </div>
                 </div>
                 <!-- invites-row -->
                 <div class="invites-row">
-                    <img src="images/binance-logo.png" style="width:20px; height:20px">
+                    <!-- profile image of invite -->
+                    <div class="invite-profile-img">
+                        <img src="images/binance-logo.png" style="width:20px; height:20px">
+                    </div>
                     <div class="invites-row-box">
+                        <!-- name of the invite -->
                         <p>recurit name</p>
                         <p class="invite-amount">2000 Gato</p>
                     </div>
                 </div>
                 <!-- invites-row -->
                 <div class="invites-row">
-                    <img src="images/binance-logo.png" style="width:20px; height:20px">
+                    <!-- profile image of invite -->
+                    <div class="invite-profile-img">
+                        <img src="images/binance-logo.png" style="width:20px; height:20px">
+                    </div>
                     <div class="invites-row-box">
+                        <!-- name of the invite -->
                         <p>recurit name</p>
                         <p class="invite-amount">2000 Gato</p>
                     </div>
