--- a/mission.html
+++ b/mission.html
@@ -20,7 +20,7 @@
             <div class="mission-containers">
                 <!-- mission-cancel -->
                 <div class="mission-cancel">
-                    <a href="index.html"><i class='bx bx-x'></i></a>
+                    <a href="index.html"><i class='bx bxs-left-arrow'></i></a>
                 </div>
                 <!-- mission-header -->
                 <div class="mission-header">
@@ -29,7 +29,9 @@
                 <!-- mission-info -->
                 <div class="mission-info">
                     <p class="mission-bal">Balance</p>
+                    <!-- mission coin balance -->
                     <div class="mission-balance">
+                        <!-- coin-amount -->
                         <div class="coin-amount">
                             <img src="images/Transparent Ton Catel logo.png" style="height: 25px; width: 25px;">
                             <p>0</p>
@@ -57,9 +59,11 @@
                         <div class="mission-boxes">
                             <img src="images/icons8-twitterx.svg">
                             <div class="mission-boxes1">
+                                <!-- mission task -->
                                 <p>Join Ton Catel on X</p>
                                 <div class="mission-boxes2">
                                     <p>+500</p>
+                                    <!-- mission start-btn -->
                                     <button class="mission-btn"><a href="verify.html">Start</a></button>
                                 </div>
                             </div>
@@ -68,10 +72,12 @@
                         <div class="mission-boxes">
                             <img src="images/telegram-svgrepo-com.svg">
                             <div class="mission-boxes1">
+                                <!-- mission task -->
                                 <p>Join Ton Catel on Telegram</p>
                                 <div class="mission-boxes2">
                                     <p>+500</p>
-                                    <button class="mission-btn">Start</button>
+                                    <!-- mission start-btn -->
+                                    <button class="mission-btn"><a href="verify.html">Start</a></button>
                                 </div>
                             </div>
                         </div>
@@ -79,10 +85,12 @@
                         <div class="mission-boxes">
                             <img src="images/youtube-svgrepo-com.svg">
                             <div class="mission-boxes1">
+                                <!-- mission task -->
                                 <p>Play video and subscribe</p>
                                 <div class="mission-boxes2">
                                     <p>+400</p>
-                                    <button class="mission-btn">Verify</button>
+                                    <!-- mission start-btn -->
+                                    <button class="mission-btn"><a href="verify.html">start</a></button>
                                 </div>
                             </div>
                         </div>
@@ -90,10 +98,12 @@
                         <div class="mission-boxes">
                             <img src="images/gamepad-svgrepo-com (2).svg">
                             <div class="mission-boxes1">
+                                <!-- mission task -->
                                 <p>Play Tomarket</p>
                                 <div class="mission-boxes2">
                                     <p>+300</p>
-                                    <button class="mission-btn">Verify</button>
+                                    <!-- mission start-btn -->
+                                    <button class="mission-btn"><a href="verify.html">Start</a></button>
                                 </div>
                             </div>
                         </div>
@@ -101,10 +111,12 @@
                         <div class="mission-boxes">
                             <img src="images/www-svgrepo-com.svg">
                             <div class="mission-boxes1">
+                                <!-- mission task -->
                                 <p>Visit ton.org</p>
                                 <div class="mission-boxes2">
                                     <p>+200</p>
-                                    <button class="mission-btn"> Verify</button>
+                                    <!-- mission start-btn -->
+                                    <button class="mission-btn"> <a href="verify.html">Start</a></button>
                                 </div>
                             </div>
                         </div>
