--- a/updates.html
+++ b/updates.html
@@ -15,9 +15,11 @@
 <body>
     <!--update codes-->
     <div class="update-body">
+        <!-- update container -->
         <div class="update-container-box">
+            <!-- update cancel -->
             <div class="update-cancel">
-                <a href="index.html"><i class='bx bx-x'></i></a>
+                <a href="index.html"><i class='bx bxs-left-arrow'></i></a>
             </div>
             <!-- update-container -->
             <div class="update-container">
@@ -27,7 +29,6 @@
                         <p class="updates-big">Airdrop is Coming❕</p>
                         <p class="updates-small">Stay tuned...</p>
                     </div>
-
                 </div>
                 <!-- update-info -->
                 <div class="update-info">
@@ -41,42 +42,52 @@
                     <div class="update-box-titles">
                         <p>Progress / Milestones</p>
                     </div>
+                    <!-- update boxes -->
                     <div class="update-boxes">
                         <p>MVP-Gaming bot</p>
                         <i class='bx bx-check'></i>
                     </div>
+                    <!-- update boxes -->
                     <div class="update-boxes">
-                        <p>Meme for the day-in-game feature</p>
+                        <p>Meme for the day mini-game</p>
                         <p class="loading">Loading</p>
                     </div>
+                    <!-- update boxes -->
                     <div class="update-boxes">
                         <p>Connect wallet</p>
                         <p class="loading">Loading</p>
                     </div>
+                    <!-- update boxes -->
                     <div class="update-boxes">
                         <p>Road to a thousand memes</p>
                         <p class="soon">Coming Soon...</p>
                     </div>
+                    <!-- update boxes -->
                     <div class="update-boxes">
                         <p>GANGWARS</p>
                         <p class="soon">Coming Soon...</p>
                     </div>
+                    <!-- update boxes -->
                     <div class="update-boxes">
                         <p>The DEX</p>
                         <p class="soon">Coming Soon...</p>
                     </div>
+                    <!-- update boxes -->
                     <div class="update-boxes">
                         <p>Partnerships</p>
                         <p class="soon">Coming Soon...</p>
                     </div>
+                    <!-- update boxes -->
                     <div class="update-boxes">
                         <p>Exchange negotiations</p>
                         <p class="soon">Coming Soon...</p>
                     </div>
+                    <!-- update boxes -->
                     <div class="update-boxes">
                         <p>Shares calculation</p>
                         <p class="soon">Coming Soon...</p>
                     </div>
+                    <!-- update boxes -->
                     <div class="update-boxes">
                         <p>Airdrop and Listing</p>
                         <p class="soon">Coming Soon...</p>
@@ -84,7 +95,6 @@
                 </div>
             </div>
         </div>
-
     </div>
 </body>
 
