--- a/bonuses.html
+++ b/bonuses.html
@@ -13,23 +13,32 @@
 </head>
 
 <body>
+    <!-- bonus page -->
     <div class="bonus-body">
+        <!-- bonus-cancel -->
         <div class="bonus-cancel">
-            <a href="index.html"><i class='bx bx-x'></i></a>
+            <a href="index.html"><i class='bx bxs-left-arrow'></i></a>
         </div>
+        <!-- bonus title -->
         <div class="bonus-title">
             <p class="bonus-header">Bonuses</p>
         </div>
+        <!-- bonus container -->
         <div class="bonus-container">
+            <!-- bonus-box -->
             <div class="bonus-box">
+                <!-- bonus-min-box -->
                 <div class="bonus-min-box">
                     <p>Welcome Bonus</p>
+                    <!-- bonus coin -->
                     <div class="bonus-coin">
                         <img src="images/Transparent Ton Catel logo.png" style="width: 20px;height: 20px">
                         <p>9550</p>
                     </div>
+                    <!-- bonus claim-btn -->
                     <button class="bouns-claim-btn">Claim</button>
                 </div>
+                <!-- bonus outtext -->
                 <div class="bonus-outtext">
                     <p>Welcome to the gang</p>
                     <p>Initial welcome bonus is 10,000Gato</p>
@@ -37,94 +46,124 @@
                     <p>after each 10,000 new members</p>
                 </div>
             </div>
+            <!-- bonus-box -->
             <div class="bonus-box">
+                <!-- bonus-min-box -->
                 <div class="bonus-min-box">
                     <p>Account Age</p>
+                    <!-- bonus coin -->
                     <div class="bonus-coin">
                         <img src="images/Transparent Ton Catel logo.png" style="width: 20px;height: 20px">
                         <p>2000</p>
                     </div>
+                    <!-- bonus claim-btn -->
                     <button class="bouns-claim-btn">Claim</button>
                 </div>
+                <!-- bonus outtext -->
                 <div class="bonus-outtext">
                     <p>Verify the age</p>
                     <p>Of your telegram account</p>
                 </div>
             </div>
+            <!-- bonus-box -->
             <div class="bonus-box">
+                <!-- bonus-min-box -->
                 <div class="bonus-min-box">
                     <p>Telegram Premuim</p>
+                    <!-- bonus coin -->
                     <div class="bonus-coin">
                         <img src="images/Transparent Ton Catel logo.png" style="width: 20px;height: 20px">
                         <p>5000</p>
                     </div>
+                    <!-- bonus claim-btn -->
                     <button class="bouns-claim-btn">Claim</button>
                 </div>
+                <!-- bonus outtext -->
                 <div class="bonus-outtext">
                     <p>Subscribe to the telegram premuim</p>
                 </div>
             </div>
         </div>
         <div class="bonus-container">
+            <!-- bonus-box -->
             <div class="bonus-box">
+                <!-- bonus-min-box -->
                 <div class="bonus-min-box">
                     <p>First on-chain Transaction</p>
+                    <!-- bonus coin -->
                     <div class="bonus-coin">
                         <img src="images/Transparent Ton Catel logo.png" style="width: 20px;height: 20px">
                         <p>2000</p>
                     </div>
+                    <!-- bonus claim-btn -->
                     <button class="bouns-claim-btn">Claim</button>
                 </div>
+                <!-- bonus outtext -->
                 <div class="bonus-outtext">
                     <p>Connect your wallet</p>
                     <p>Perform a check-in</p>
                     <p>0r any other on-chain transaction</p>
                 </div>
             </div>
+            <!-- bonus-box -->
             <div class="bonus-box">
+                <!-- bonus-min-box -->
                 <div class="bonus-min-box">
                     <p>10 Recruits</p>
+                    <!-- bonus coin -->
                     <div class="bonus-coin">
                         <img src="images/Transparent Ton Catel logo.png" style="width: 20px;height: 20px">
                         <p>5000</p>
                     </div>
+                    <!-- bonus claim-btn -->
                     <button class="bouns-claim-btn">Claim</button>
                 </div>
+                <!-- bonus outtext -->
                 <div class="bonus-outtext">
                     <p>Invite 10 Friends</p>
                 </div>
             </div>
+            <!-- bonus-box -->
             <div class="bonus-box">
+                <!-- bonus-min-box -->
                 <div class="bonus-min-box">
                     <p>20 Recruits</p>
+                    <!-- bonus coin -->
                     <div class="bonus-coin">
                         <img src="images/Transparent Ton Catel logo.png" style="width: 20px;height: 20px">
                         <p>10,000</p>
                     </div>
+                    <!-- bonus claim-btn -->
                     <button class="bouns-claim-btn">Claim</button>
                 </div>
+                <!-- bonus outtext -->
                 <div class="bonus-outtext">
                     <p>Invite 20 Friends</p>
                 </div>
             </div>
         </div>
+        <!-- bonus container -->
         <div class="bonus-container">
+            <!-- bonus-box -->
             <div class="bonus-box">
+                <!-- bonus-min-box -->
                 <div class="bonus-min-box">
                     <p>51 Recruits</p>
+                    <!-- bonus coin -->
                     <div class="bonus-coin">
                         <img src="images/Transparent Ton Catel logo.png" style="width: 20px;height: 20px">
                         <p>100,000</p>
                     </div>
+                    <!-- bonus claim-btn -->
                     <button class="bouns-claim-btn">Claim</button>
                 </div>
+                <!-- bonus outtext -->
                 <div class="bonus-outtext">
                     <p>Invite 51 Friends</p>
                 </div>
             </div>
         </div>
     </div>
-
 
 </body>
 
