--- a/daily checkin.html
+++ b/daily checkin.html
@@ -13,75 +13,104 @@
 </head>
 
 <body>
+    <!-- daily task -->
     <div class="daily-task">
-        <p class="coin-amount-task">11,500</p>
-        <div class="task-container">
-            <div class="task-cancel">
-                <a href="index.html"><i class='bx bx-x'></i></a>
+        <!-- <div class="daily-coin-balance">
+            <div class="coin-amount">
+                <img src="images/Transparent Ton Catel logo.png" style="height: 25px; width: 25px;">
+                <p>0</p>
             </div>
+        </div> -->
+        <!--task container-->
+        <div class="task-container">
+            <!-- task-cancel -->
+            <div class="task-cancel">
+                <a href="index.html"><i class='bx bxs-left-arrow'></i></a>
+            </div>
+            <div class="task-title">
+                <p class="daily-tasks">Daily Tasks</p>
+            </div>
+            <!-- task-box -->
             <div class="task-box">
                 <div class="box-cap1">
                     <p class="t-text">Log in</p>
+                    <!-- task-streak -->
                     <p class="streak">Streak 1/10</p>
                 </div>
                 <div class="box-cap2">
-                    <div class="box-cap3">
+                    <!-- task award amount -->
+                    <div class="task-award-amount">
                         <img src="images/Transparent Ton Catel logo.png"
                             style="width: 20px; background-color:  #c5c5c5; border-radius: 50%;">
                         <p>500</p>
                     </div>
-                    <div class="box-cap4">
-                        <p>GO!</p>
+                    <!-- task button -->
+                    <div class="task button">
+                        <button class="task-btn">GO!</button>
                     </div>
                 </div>
             </div>
+            <!-- task-box -->
             <div class="task-box">
-                <div class="box-cape">
-                    <p class="x-text">Check-in</p>
+                <!-- task boxes -->
+                <div class="task-boxes">
+                    <p class="task-text">Check-in</p>
                 </div>
-                <div class="box-cape">
-                    <div class="box-cape1">
+                <!-- task boxes -->
+                <div class="task-boxes">
+                    <!-- task award amount -->
+                    <div class="task-award-amount">
                         <img src="images/Transparent Ton Catel logo.png"
                             style="width: 20px; background-color:  #c5c5c5; border-radius: 50%;">
                         <p>2000</p>
                     </div>
-                    <div class="box-cap4">
-                        <p>GO!</p>
+                    <!-- task button -->
+                    <div class="task button">
+                        <button class="task-btn">GO!</button>
                     </div>
                 </div>
             </div>
+            <!-- task-box -->
             <div class="task-box">
-                <div class="box-cape">
-                    <p class="x-text">Daily Ads</p>
+                <!-- task boxes -->
+                <div class="task-boxes">
+                    <p class="task-text">Daily Ads</p>
                 </div>
-                <div class="box-cape">
-                    <div class="box-cape1">
+                <!-- task boxes -->
+                <div class="task-boxes">
+                    <!-- task award amount -->
+                    <div class="task-award-amount">
                         <img src="images/Transparent Ton Catel logo.png"
                             style="width: 20px; background-color:  #c5c5c5; border-radius: 50%;">
                         <p>2000</p>
                     </div>
-                    <div class="box-cap4">
-                        <p>GO!</p>
+                    <!-- task button -->
+                    <div class="task button">
+                        <button class="task-btn">GO!</button>
                     </div>
                 </div>
             </div>
+            <!-- task-box -->
             <div class="task-box">
-                <div class="box-cape">
-                    <p class="x-text">Daily Invite</p>
+                <!-- task boxes -->
+                <div class="task-boxes">
+                    <p class="task-text">Daily Invite</p>
                 </div>
-                <div class="box-cape">
-                    <div class="box-cape1">
+                <!-- task boxes -->
+                <div class="task-boxes">
+                    <!-- task award amount -->
+                    <div class="task-award-amount">
                         <img src="images/Transparent Ton Catel logo.png"
                             style="width: 20px; background-color:  #c5c5c5; border-radius: 50%;">
                         <p>2000</p>
                     </div>
-                    <div class="box-cap4">
-                        <p>GO!</p>
+                    <!-- task button -->
+                    <div class="task button">
+                        <button class="task-btn">GO!</button>
                     </div>
                 </div>
             </div>
         </div>
-        <p class="daily-tasks">Daily Tasks</p>
     </div>
 
 </body>
