--- a/level.html
+++ b/level.html
@@ -13,49 +13,79 @@
 </head>
 
 <body>
+    <!-- level page -->
     <div class="level-body">
         <div class="level-page">
+            <!-- level container -->
             <div class="level-container">
-                <div class="lvl-title">
-                    <div class="lvl-bullet"></div>
-                    <p>Levels</p>
-                    <div class="lvl-bullet"></div>
+                <!-- level header -->
+                <div class="level-header">
+                    <!-- level title -->
+                    <div class="lvl-title">
+                        <div class="lvl-bullet"></div>
+                        <p>Levels</p>
+                        <div class="lvl-bullet"></div>
+                    </div>
+                    <!-- level cancel -->
+                    <div class="level-cancel">
+                        <a href="index.html"><i class='bx bxs-left-arrow'></i></a>
+                    </div>
                 </div>
-                <div class="level-cancel">
-                    <a href="index.html"><i class='bx bx-x'></i></a>
-                </div>
+                <!-- level box -->
                 <div class="level-box">
+                    <!-- level box1 -->
                     <div class="level-box1">
+                        <!-- level image -->
                         <img src="images/IMG_2105.PNG">
+                        <!-- level box-text -->
                         <div class="lvlbox-text">
+                            <!-- level name -->
                             <p class="lvl-name">Lv1-Mew</p>
+                            <!-- level coin -->
                             <p class="lvl-coin">0 Gato</p>
+                            <!-- level farming speed -->
                             <p>1000/4hrs</p>
+                            <!-- level upgred-btn -->
                             <div class="upgrade-btn">
                                 <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
                             </div>
                         </div>
                     </div>
+                    <!-- level box1 -->
                     <div class="level-box1">
+                        <!-- level image -->
                         <img src="images/lvl2.PNG" width="20px, height: 30px">
+                        <!-- level box-text -->
                         <div class="lvlbox-text">
+                            <!-- level name -->
                             <p class="lvl-name">Lv2-Stray Cat</p>
+                            <!-- level coin -->
                             <p class="lvl-coin">20,000 Gato</p>
+                            <!-- level farming speed -->
                             <p>1500/4hrs</p>
+                            <!-- level upgrade-btn -->
                             <div class="upgrade-btn">
                                 <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
                             </div>
                         </div>
                     </div>
+                    <!-- level box1 -->
                     <div class="level-box1">
+                        <!-- level image -->
                         <img src="images/lvl3.PNG" width="20px, height: 30px">
+                        <!-- level box-text -->
                         <div class="lvlbox-text">
+                            <!-- level name -->
                             <p class="lvl-name">Lv3-Worker</p>
+                            <!-- level coin -->
                             <p class="lvl-coin">40,000 Gato</p>
+                            <!-- level speed -->
                             <p>3000/4hrs</p>
+                            <!-- level uprade-btn -->
                             <div class="upgrade-btn">
                                 <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
                             </div>
+                            <!-- level requirement -->
                             <div class="requirement">
                                 <div class="requirement1">
                                     <label>Coins</label>
@@ -66,34 +96,50 @@
                                     <input type="checkbox">
                                 </div>
                             </div>
+                            <!-- level bypass-btn -->
                             <div class="Bypass-btn">
                                 <button onclick="changeClr()" id="btn">ByPass</button>
                             </div>
                         </div>
                     </div>
-
                 </div>
+                <!-- level box -->
                 <div class="level-box">
+                    <!-- level box1 -->
                     <div class="level-box1">
+                        <!-- level image -->
                         <img src="images/lvl4.PNG" width="20px, height: 30px">
+                        <!-- level box-text -->
                         <div class="lvlbox-text">
+                            <!-- level name -->
                             <p class="lvl-name">Lv4-Solider</p>
+                            <!-- level-coin -->
                             <p class="lvl-coin">60,000 Gato</p>
+                            <!-- level-speed -->
                             <p>4000/4hrs</p>
+                            <!-- level upgrade-btn -->
                             <div class="upgrade-btn">
                                 <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
                             </div>
                         </div>
                     </div>
+                    <!-- level box1 -->
                     <div class="level-box1">
+                        <!-- level image -->
                         <img src="images/lvl5.PNG" width="20px, height: 30px">
+                        <!-- level box-text -->
                         <div class="lvlbox-text">
+                            <!-- level-name -->
                             <p class="lvl-name">Lv5-Associate</p>
+                            <!-- level-coin -->
                             <p class="lvl-coin">80,000 Gato</p>
+                            <!-- level farming speed -->
                             <p>7000/4hrs</p>
+                            <!-- level upgrade-btn -->
                             <div class="upgrade-btn">
                                 <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
                             </div>
+                            <!-- level uprade-requirement -->
                             <div class="requirement">
                                 <div class="requirement1">
                                     <label>Coins</label>
@@ -104,35 +150,48 @@
                                     <input type="checkbox">
                                 </div>
                             </div>
+                            <!-- level bypass-btn -->
                             <div class="Bypass-btn">
                                 <button onclick="changeClr()" id="btn">ByPass</button>
                             </div>
                         </div>
                     </div>
+                    <!-- level box1 -->
                     <div class="level-box1">
                         <img src="images/lvl6.PNG" width="20px, height: 30px">
+                        <!-- level box-text -->
                         <div class="lvlbox-text">
+                            <!-- level name -->
                             <p class="lvl-name">Lv6-Underboss</p>
+                            <!-- level coin -->
                             <p class="lvl-coin">100,000 Gato</p>
+                            <!-- level farming speed  -->
                             <p>10,000/4hrs</p>
+                            <!-- level upgrade btn -->
                             <div class="upgrade-btn">
                                 <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
                             </div>
                         </div>
                     </div>
-
                 </div>
-
+                <!-- level box -->
                 <div class="level-box">
+                    <!-- level box1 -->
                     <div class="level-box1">
                         <img src="images/IMG_2535.PNG">
+                        <!-- level box-text -->
                         <div class="lvlbox-text">
+                            <!-- level name -->
                             <p class="lvl-name">Lv7-Boss</p>
+                            <!-- level coin -->
                             <p class="lvl-coin">150,000 Gato</p>
+                            <!-- level farming speed -->
                             <p>13,000/4hrs</p>
+                            <!-- level-upgrade-btn -->
                             <div class="upgrade-btn">
                                 <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
                             </div>
+                            <!-- level upgrade requirement section -->
                             <div class="requirement">
                                 <div class="requirement1">
                                     <label>Coins</label>
@@ -143,31 +202,44 @@
                                     <input type="checkbox">
                                 </div>
                             </div>
+                            <!-- level bypass-btn -->
                             <div class="Bypass-btn">
                                 <button onclick="changeClr()" id="btn">ByPass</button>
                             </div>
                         </div>
                     </div>
+                    <!-- level box1 -->
                     <div class="level-box1">
+                        <!-- level img -->
                         <img src="images/IMG_2675.PNG" width="20px, height: 30px">
+                        <!-- level box-text -->
                         <div class="lvlbox-text">
                             <p class="lvl-name">Lv8-Cato</p>
                             <p class="lvl-coin">200,000 Gato</p>
                             <p>15,000/4hrs</p>
+                            <!-- level upgrade-btn -->
                             <div class="upgrade-btn">
                                 <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
                             </div>
                         </div>
                     </div>
+                    <!-- level box1 -->
                     <div class="level-box1">
+                        <!-- level image -->
                         <img src="images/IMG_2663.PNG" width="20px, height: 30px">
+                        <!-- level box-text -->
                         <div class="lvlbox-text">
+                            <!-- level name -->
                             <p class="lvl-name">Lv9-Don</p>
+                            <!-- level coin -->
                             <p class="lvl-coin">400,000 Gato</p>
+                            <!-- level farming speed -->
                             <p>17,000/4hrs</p>
+                            <!-- level upgrade-btn -->
                             <div class="upgrade-btn">
                                 <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
                             </div>
+                            <!-- level requirement -->
                             <div class="requirement">
                                 <div class="requirement1">
                                     <label>Coins</label>
@@ -178,65 +250,79 @@
                                     <input type="checkbox">
                                 </div>
                             </div>
+                            <!-- level bypass-btn -->
                             <div class="Bypass-btn">
                                 <button onclick="changeClr()" id="btn">ByPass</button>
                             </div>
                         </div>
                     </div>
-
                 </div>
+                <!-- level box -->
                 <div class="level-box">
+                    <!-- level box1 -->
                     <div class="level-box1">
+                        <!-- level image -->
                         <img src="images/IMG_2672.PNG" width="20px, height: 30px">
+                        <!-- level box-text -->
                         <div class="lvlbox-text">
+                            <!-- level name -->
                             <p class="lvl-name">Lv10-Lord</p>
+                            <!-- level coin -->
                             <p class="lvl-coin">500,000 Gato</p>
                             <p>GP</p>
+                            <!-- level farming speed -->
                             <p>19,000/4hrs</p>
+                            <!-- level upgrade-btn -->
                             <div class="upgrade-btn">
                                 <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
                             </div>
                         </div>
                     </div>
+                    <!-- level box1 -->
                     <div class="level-box1">
+                        <!-- level image -->
                         <img src="images/lvl5.PNG" width="20px, height: 30px">
+                        <!-- level-box-text -->
                         <div class="lvlbox-text">
+                            <!-- level-name -->
                             <p class="lvl-name">Lv11-Godfather</p>
                             <p>GP(BYpass avaiable)</p>
+                            <!-- level farming speed -->
                             <p>20,000/4hrs</p>
+                            <!-- level upgrade-btn -->
                             <div class="upgrade-btn">
                                 <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
                             </div>
+                            <!-- level bypass-btn -->
                             <div class="Bypass-btn">
                                 <button onclick="changeClr()" id="btn">ByPass</button>
                             </div>
                         </div>
                     </div>
+                    <!-- level box1 -->
                     <div class="level-box1">
+                        <!-- level image -->
                         <img src="images/lvl6.PNG" width="20px, height: 30px">
+                        <!-- level box-text -->
                         <div class="lvlbox-text">
+                            <!-- level name -->
                             <p class="lvl-name">Lv12-Gato</p>
                             <p>GP</p>
                             <p>Telegram Stars</p>
+                            <!-- level-upgrade-btn -->
                             <div class="upgrade-btn">
                                 <button onclick="upgradeClr()" id="btn" class="upgrade-btnn">Upgrade</button>
                             </div>
+                            <!-- level bypass-btn -->
                             <div class="Bypass-btn">
                                 <button onclick="changeClr()" id="btn">ByPass</button>
                             </div>
                         </div>
                     </div>
-
                 </div>
-
-
-
-
             </div>
         </div>
     </div>
-
-
 </body>
 
 </html>
