--- a/verify.html
+++ b/verify.html
@@ -13,44 +13,59 @@
 </head>
 
 <body>
+    <!-- verify page -->
     <div class="mission-body">
+        <!-- verify container -->
         <div class="mission-container">
             <div class="mission-containers">
-
+                <!-- verify-cancel -->
                 <div class="mission-cancel">
-                    <a href="mission.html"><i class='bx bx-x'></i></a>
+                    <a href="mission.html"><i class='bx bxs-left-arrow'></i></a>
                 </div>
+                <!-- verify header -->
                 <div class="mission-header">
                     <p>Missions</p>
                 </div>
+                <!-- verify info -->
                 <div class="mission-info">
                     <p class="mission-bal">Balance</p>
+                    <!-- verify coin balance -->
                     <div class="mission-balance">
-                        <img src="images/Transparent Ton Catel logo.png" style="width: 25px; height: 25px;">
-                        <p class="coin-balance">33,500</p>
+                        <!-- coin amount -->
+                        <div class="coin-amount">
+                            <img src="images/Transparent Ton Catel logo.png" style="height: 25px; width: 25px;">
+                            <p>0</p>
+                        </div>
                     </div>
+                    <!-- verify question -->
                     <div class="verify-question">
                         <p>Are you sure, you</p>
                         <p>completed the mission?</p>
                     </div>
-                    <div class="mission-text">
+                    <!-- verify text -->
+                    <div class="verify-notice">
                         <p>If you attempt to cheat, Don Catos</p>
                         <p>Will punish you by deducting your balance.</p>
                         <p>❗If Cheating persists, Don Catos will banish you❗</p>
                     </div>
                 </div>
+                <!-- verify box -->
                 <div class="verify-box">
+                    <!-- verify award/penalty box -->
                     <div class="award-penalty">
+                        <!-- verify award box -->
                         <div class="award-box">
                             <p class="award-text">+500</p>
                             <p class="award">Reward</p>
                         </div>
                         <p>vs</p>
+                        <!-- verify penalty box -->
                         <div class="penalty-box">
                             <p class="penalty-text">-1000</p>
                             <p class="penalty">Penalty</p>
                         </div>
                     </div>
+                    <!-- verify btn -->
                     <div class="verify-btns">
                         <button class="verify-btn">Yes, verify.</button>
                         <button class="check-btn">Check again</button>
