--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="script.js"></script>
     <title>Bot</title>
 </head>
 
@@ -30,6 +29,7 @@
             <div class="channels-icon-box">
                 <p class="LT3">on TON</p>
                 <p class="icon-text">Keep in Touch:</p>
+                <!-- loading page social media section -->
                 <div class="channel-box">
                     <div class="channels">
                         <i class='bx bxl-telegram'></i>
@@ -155,9 +155,10 @@
                     <p><a href="updates.html">Update</a></p>
                 </div>
             </div>
-        </div> -->
+        </div>
     </div>
-
+    <!-- javascript -->
+    <script defer src="script.js"></script>
 </body>
 
 </html>
