--- a/mission.html
+++ b/mission.html
@@ -19,9 +19,9 @@
         <div class="mission-container">
             <div class="mission-containers">
                 <!-- mission-cancel -->
-                <div class="mission-cancel">
+                <!-- <div class="mission-cancel">
                     <a href="index.html"><i class='bx bxs-left-arrow'></i></a>
-                </div>
+                </div> -->
                 <!-- mission-header -->
                 <div class="mission-header">
                     <p>Missions</p>
@@ -49,7 +49,6 @@
                 <div class="mission-option">
                     <p class="opt">Active</p>
                     <p class="opt">Completed</p>
-                    <p>Limit - 5 mission per day</p>
                 </div>
                 <!-- mission-box-container-->
                 <div class="mission-box-container">
@@ -90,7 +89,7 @@
                                 <div class="mission-boxes2">
                                     <p>+400</p>
                                     <!-- mission start-btn -->
-                                    <button class="mission-btn"><a href="verify.html">start</a></button>
+                                    <button class="mission-btn"><a href="verify.html">Start</a></button>
                                 </div>
                             </div>
                         </div>
@@ -120,6 +119,8 @@
                                 </div>
                             </div>
                         </div>
+
+
                         <!-- mission-promo-link -->
                         <div class="promo-link">
                             <button class="promo-btn">Click here for promo and partnership</button>
@@ -127,6 +128,42 @@
                     </div>
 
                 </div>
+            </div>
+        </div>
+    </div>
+    <!-- footer section -->
+    <div class="footer">
+        <div class="footer-box1">
+            <!-- level-footer -->
+            <div class="footer-box">
+                <a href="level.html"><img src="images/profile-image-1349-svgrepo-com.svg"
+                        style="height: 20px; width:20px" alt=""></a>
+                <p><a href="level.html">Profile</a></p>
+            </div>
+            <!-- mission-footer -->
+            <div class="footer-box">
+                <a href="mission.html"><img src="images/task-list-svgrepo-com.svg" style="height: 20px; width:20px;"
+                        alt=""></a>
+                <p><a href="mission.html">Missions</a></p>
+            </div>
+        </div>
+        <!-- home-footer -->
+        <div class="home">
+            <a href="index.html"><img src="images/Transparent Ton Catel logo.png" alt="Ton Catel logo"
+                    style="height: 50px; width:50px; border-radius: 50%; box-shadow: 0 0 50px #ccc; background-color: #ccc; opacity: 0.9;"></a>
+        </div>
+        <!-- invite-footer -->
+        <div class="footer-box1">
+            <div class="footer-box">
+                <a href="invites.html"><img src="images/friend-svgrepo-com.svg" style="height: 20px; width:30px"
+                        alt=""></a>
+                <p><a href="invites.html">Invites</a></p>
+            </div>
+            <!-- update-footer -->
+            <div class="footer-box">
+                <a href="updates.html"><img src="images/screwdriver-wrench-svgrepo-com.svg"
+                        style="height: 20px; width:20px" alt=""></a>
+                <p><a href="updates.html">Update</a></p>
             </div>
         </div>
     </div>
