--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <!--loading page section -->
-    <div class="preloader">
+    <div class="preloader" id="preloader">
         <div class="preloader-container">
             <!-- loading page animination -->
             <div class="loading"></div>
