--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
             <!-- loading page animination -->
             <div class="loading"></div>
             <p class="LT">Loading</p>
-            <!-- loading page text -->
-            <div class="load-text">
-                <p class="LT1">Ton Catel</p>
-                <p class="LT2 ">will be launched</p>
-            </div>
         </div>
         <!-- loading page official social media -->
         <div class="channels-icons">
             <div class="channels-icon-box">
+                <!-- loading page text -->
+                <div class="load-text">
+                    <p class="LT1">Ton Catel</p>
+                    <p class="LT2 ">will be launched</p>
+                </div>
                 <p class="LT3">on TON</p>
                 <p class="icon-text">Keep in Touch:</p>
                 <!-- loading page social media section -->
@@ -64,7 +64,7 @@
                 <div class="level">
                     <div class="level-name">
                         <p>Mew</p>
-                        <i class='bx bx-chevron-right'></i>
+                        <i class="fa-solid fa-chevron-right"></i>
                     </div>
                     <p class="lvl"><a href="level.html">Level 1</a></p>
                 </div>
